# medical_coding_bot

./: .gitignore  bot_details.txt  db_concept.txt  pyproject.toml  requirements.txt
app/: chat.py  database.py  llm.py  main.py  models.py  prompt.py  schemas.py
appv1/: chat.py  main.py  models.py  mysql_database.py  schemas.py  streamlit_app.py
