[project]
name = "med-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "click==8.3.1",
    "colorama==0.4.6",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi==0.128.0",
    "greenlet==3.3.0",
    "h11==0.16.0",
    "idna==3.11",
    "lance-namespace==0.4.3",
    "lance-namespace-urllib3-client==0.4.3",
    "numpy==2.4.0",
    "pyarrow==22.0.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pylance==1.0.1",
    "pymongo==4.15.5",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.21",
    "six==1.17.0",
    "sqlalchemy==2.0.45",
    "starlette==0.50.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.2",
    "uvicorn==0.40.0",
]

[tool.uv.workspace]
members = [
    "med_bot_1",
]
